--- a/.github/workflows/test-windows-msix.yml
+++ b/.github/workflows/test-windows-msix.yml
@@ -31,12 +31,18 @@ jobs:
       - name: Install certificates
         run: |
           echo $env:RUNNER_TEMP
-          $env:CERTIFICATE_PATH = "$env:RUNNER_TEMP\picguard.pfx"
-          echo $env:WINDOWS_CERTIFICATE | openssl base64 -d -out $env:CERTIFICATE_PATH
-          (get-content windows\packaging\msix\make_config.yaml) -replace 'CERTIFICATE_PATH_PLACEHOLDER', $env:CERTIFICATE_PATH -replace 'CERTIFICATE_PASSWORD_PLACEHOLDER', $env:WINDOWS_CERTIFICATE_PASSWORD | Out-File -encoding ASCII windows\packaging\msix\make_config.yaml
+          $certificate_path = "$env:RUNNER_TEMP\picguard.pfx"
+          # https://stackoverflow.com/questions/15414678/how-to-decode-a-base64-string
+          # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
+          $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
+          [IO.File]::WriteAllBytes("$certificate_path", $bytes)
+          (get-content windows\packaging\msix\make_config.yaml) -replace 'PUBLISHER_NAME_PLACEHOLDER', $env:WINDOWS_PUBLISHER_NAME -replace 'IDENTITY_NAME_PLACEHOLDER', $env:WINDOWS_IDENTITY_NAME -replace 'CERTIFICATE_PATH_PLACEHOLDER', $certificate_path -replace 'CERTIFICATE_PASSWORD_PLACEHOLDER', $env:WINDOWS_CERTIFICATE_PASSWORD -replace 'PUBLISHER_PLACEHOLDER', $env:WINDOWS_PUBLISHER | Out-File -encoding utf8 windows\packaging\msix\make_config.yaml
         env:
+          WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
+          WINDOWS_IDENTITY_NAME: ${{ secrets.WINDOWS_IDENTITY_NAME }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
+          WINDOWS_PUBLISHER: ${{ secrets.WINDOWS_PUBLISHER }}
 
       - name: Build msix
         run: flutter_distributor package --platform windows --targets msix --artifact-name picguard.msix
@@ -50,6 +56,16 @@ jobs:
         if: ${{ always() }}
         run: |
           ls
-          echo "$env:RUNNER_TEMP\picguard.pfx"
-          remove-item -Path "$env:RUNNER_TEMP\picguard.pfx" -Force -ErrorAction SilentlyContinue
-          remove-item -Path "windows\packaging\msix\make_config.yaml" -Force -ErrorAction SilentlyContinue
+          if (test-path -Path "$env:RUNNER_TEMP\picguard.pfx") {
+            echo "$env:RUNNER_TEMP\picguard.pfx"
+            remove-item -Path "$env:RUNNER_TEMP\picguard.pfx" -Force -ErrorAction SilentlyContinue
+          } else {
+            echo "File($env:RUNNER_TEMP\picguard.pfx) doesn't exist."
+          }
+          
+          if (test-path -Path "windows\packaging\msix\make_config.yaml") {
+            echo "windows\packaging\msix\make_config.yaml"
+            remove-item -Path "windows\packaging\msix\make_config.yaml" -Force -ErrorAction SilentlyContinue
+          } else {
+            echo "File(windows\packaging\msix\make_config.yaml) doesn't exist."
+          }
