--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -1,5 +1,5 @@
-app_id: 30DFB236-E218-4D60-8D2A-6739075167C6
-publisher_name: Qingdao INSCO Network Technology Co., Ltd.
+app_id: APP_ID_PLACEHOLDER
+publisher_name: PUBLISHER_NAME_PLACEHOLDER
 publisher_url: https://www.kjxbyz.com/picguard
 display_name: PicGuard
 create_desktop_icon: true
