--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -850,9 +850,6 @@ jobs:
       - name: Flutter doctor -v
         run: flutter doctor -v
 
-      - name: Install flutter dependencies
-        run: flutter pub get
-
       - name: Install certificates
         run: |
           echo $env:RUNNER_TEMP
@@ -861,7 +858,7 @@ jobs:
           # https://stackoverflow.com/questions/66239147/pfx-encoded-and-back-to-pfx-in-powershell
           $bytes = echo $env:WINDOWS_CERTIFICATE | %{[Convert]::FromBase64String($_)}
           [IO.File]::WriteAllBytes("$certificate_path", $bytes)
-          (get-content windows\packaging\msix\make_config.yaml) -replace 'PUBLISHER_NAME_PLACEHOLDER', $env:WINDOWS_PUBLISHER_NAME -replace 'IDENTITY_NAME_PLACEHOLDER', $env:WINDOWS_IDENTITY_NAME -replace 'CERTIFICATE_PATH_PLACEHOLDER', $certificate_path -replace 'CERTIFICATE_PASSWORD_PLACEHOLDER', $env:WINDOWS_CERTIFICATE_PASSWORD -replace 'PUBLISHER_PLACEHOLDER', $env:WINDOWS_PUBLISHER | Out-File -encoding utf8 windows\packaging\msix\make_config.yaml
+          (get-content pubspec.yaml) -replace 'PUBLISHER_NAME_PLACEHOLDER', $env:WINDOWS_PUBLISHER_NAME -replace 'IDENTITY_NAME_PLACEHOLDER', $env:WINDOWS_IDENTITY_NAME -replace 'CERTIFICATE_PATH_PLACEHOLDER', $certificate_path -replace 'CERTIFICATE_PASSWORD_PLACEHOLDER', $env:WINDOWS_CERTIFICATE_PASSWORD -replace 'PUBLISHER_PLACEHOLDER', $env:WINDOWS_PUBLISHER | Out-File -encoding utf8 pubspec.yaml
         env:
           WINDOWS_PUBLISHER_NAME: ${{ secrets.WINDOWS_PUBLISHER_NAME }}
           WINDOWS_IDENTITY_NAME: ${{ secrets.WINDOWS_IDENTITY_NAME }}
@@ -869,15 +866,18 @@ jobs:
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
           WINDOWS_PUBLISHER: ${{ secrets.WINDOWS_PUBLISHER }}
 
+      - name: Install flutter dependencies
+        run: flutter pub get
+
       - name: Build msix
-        run: flutter_distributor package --platform windows --targets msix --artifact-name picguard.msix
+        run: dart run msix:create
 
       # Package the build.
       - name: Copy build for msix
         run: |
-          ls -R
-          cp .\**\*.msix "$env:GITHUB_WORKSPACE\"
-        working-directory: dist
+          ls
+          cp .\*.msix "$env:GITHUB_WORKSPACE\"
+        working-directory: build\windows\x64\runner\Release
 
       - name: Show gh info
         run: gh --version
