--- a/docs/package.json
+++ b/docs/package.json
@@ -73,6 +73,8 @@
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.25",
     "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "autoprefixer": "^10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
@@ -89,6 +91,9 @@
     "muse-ui": {
       "react-hook-form": "^7.51.4"
     }
+  },
+  "resolutions": {
+    "@typescript-eslint/typescript-estree": "^7.8.0"
   },
   "engines": {
     "node": "^18"
