--- a/.github/workflows/test-macos-dmg.yml
+++ b/.github/workflows/test-macos-dmg.yml
@@ -114,7 +114,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: pkg2-artifact
+          name: dmg-artifact
           path: |
             ./*.dmg
 
